# backend-task-FastAPI-

./: README.md
dasbackend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dasbackend/config/: logging_dev.json  logging_prod.json
dasbackend/src/app/: __init__.py  logger.py  main.py
dasbackend/src/crud/: crud.py
dasbackend/src/database/: database.py
dasbackend/src/models/: models.py
dasbackend/src/schemas/: schemas.py
dasbackend/src/utils/: logging_config.py
dasbackend/tests/: crud_test.py  logging_test.py
